# adaptive-noise-schedule-diffusion-with-clip-guidance

./: .gitignore  PROJECT_CHECKLIST.md  README.md  SUMMARY.md  mlflow.db  pyproject.toml  requirements.txt  verify_project.py
configs/: ablation.yaml  default.yaml
results/: evaluation_report.txt  results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_noise_schedule_diffusion_with_clip_guidance/: __init__.py
src/adaptive_noise_schedule_diffusion_with_clip_guidance/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_noise_schedule_diffusion_with_clip_guidance/models/: __init__.py  components.py  model.py
src/adaptive_noise_schedule_diffusion_with_clip_guidance/training/: __init__.py  trainer.py
src/adaptive_noise_schedule_diffusion_with_clip_guidance/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
